# Local-Offline-Expense-Tracker

./: .gitignore  README.md
application/: App.tsx  metro.config.js  package-lock.json  package.json  tailwind.config.js
application/ios/: Podfile
application/ios/application/: AppDelegate.swift  Info.plist
application/ios/application.xcodeproj/: project.pbxproj
backend/: Cargo.toml
backend/migrations/: 001_create_accounts.sql  002_create_categories.sql  003_create_transactions.sql  004_create_recurring.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs  routes.rs
backend/src/dtos/: account_dtos.rs  category_dtos.rs  mod.rs  transaction_dtos.rs
backend/src/handlers/: accounts_handler.rs  category_handler.rs  mod.rs  root_handler.rs  transaction_handler.rs
backend/src/models/: account_model.rs  category_model.rs  mod.rs  transaction_model.rs
backend/src/services/: account_service.rs  category_service.rs  mod.rs  transaction_service.rs
backend/src/utils/: get_id.rs  mod.rs
